src/OpenCvSharpExtern/core_FileNode.h

CVAPI(ExceptionStatus) core_FileNode_read_Vec2i(cv::FileNode *node, interop::Vec2i *returnValue) { return cvTry([&] { cv::Vec2i v; (*node) >> v; interop::Vec2i ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec3i(cv::FileNode *node, interop::Vec3i *returnValue) { return cvTry([&] { cv::Vec3i v; (*node) >> v; interop::Vec3i ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec4i(cv::FileNode *node, interop::Vec4i *returnValue) { return cvTry([&] { cv::Vec4i v; (*node) >> v; interop::Vec4i ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec6i(cv::FileNode *node, interop::Vec6i *returnValue) { return cvTry([&] { cv::Vec6i v; (*node) >> v; interop::Vec6i ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec2d(cv::FileNode *node, interop::Vec2d *returnValue) { return cvTry([&] { cv::Vec2d v; (*node) >> v; interop::Vec2d ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec3d(cv::FileNode *node, interop::Vec3d *returnValue) { return cvTry([&] { cv::Vec3d v; (*node) >> v; interop::Vec3d ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec4d(cv::FileNode *node, interop::Vec4d *returnValue) { return cvTry([&] { cv::Vec4d v; (*node) >> v; interop::Vec4d ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec6d(cv::FileNode *node, interop::Vec6d *returnValue) { return cvTry([&] { cv::Vec6d v; (*node) >> v; interop::Vec6d ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec2f(cv::FileNode *node, interop::Vec2f *returnValue) { return cvTry([&] { cv::Vec2f v; (*node) >> v; interop::Vec2f ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec3f(cv::FileNode *node, interop::Vec3f *returnValue) { return cvTry([&] { cv::Vec3f v; (*node) >> v; interop::Vec3f ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec4f(cv::FileNode *node, interop::Vec4f *returnValue) { return cvTry([&] { cv::Vec4f v; (*node) >> v; interop::Vec4f ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec6f(cv::FileNode *node, interop::Vec6f *returnValue) { return cvTry([&] { cv::Vec6f v; (*node) >> v; interop::Vec6f ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec2b(cv::FileNode *node, interop::Vec2b *returnValue) { return cvTry([&] { cv::Vec2b v; (*node) >> v; interop::Vec2b ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec3b(cv::FileNode *node, interop::Vec3b *returnValue) { return cvTry([&] { cv::Vec3b v; (*node) >> v; interop::Vec3b ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec4b(cv::FileNode *node, interop::Vec4b *returnValue) { return cvTry([&] { cv::Vec4b v; (*node) >> v; interop::Vec4b ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec6b(cv::FileNode *node, interop::Vec6b *returnValue) { return cvTry([&] { cv::Vec6b v; (*node) >> v; interop::Vec6b ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec2s(cv::FileNode *node, interop::Vec2s *returnValue) { return cvTry([&] { cv::Vec2s v; (*node) >> v; interop::Vec2s ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec3s(cv::FileNode *node, interop::Vec3s *returnValue) { return cvTry([&] { cv::Vec3s v; (*node) >> v; interop::Vec3s ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec4s(cv::FileNode *node, interop::Vec4s *returnValue) { return cvTry([&] { cv::Vec4s v; (*node) >> v; interop::Vec4s ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec6s(cv::FileNode *node, interop::Vec6s *returnValue) { return cvTry([&] { cv::Vec6s v; (*node) >> v; interop::Vec6s ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec2w(cv::FileNode *node, interop::Vec2w *returnValue) { return cvTry([&] { cv::Vec2w v; (*node) >> v; interop::Vec2w ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec3w(cv::FileNode *node, interop::Vec3w *returnValue) { return cvTry([&] { cv::Vec3w v; (*node) >> v; interop::Vec3w ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec4w(cv::FileNode *node, interop::Vec4w *returnValue) { return cvTry([&] { cv::Vec4w v; (*node) >> v; interop::Vec4w ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }
CVAPI(ExceptionStatus) core_FileNode_read_Vec6w(cv::FileNode *node, interop::Vec6w *returnValue) { return cvTry([&] { cv::Vec6w v; (*node) >> v; interop::Vec6w ret; std::copy(std::begin(v.val), std::end(v.val), std::begin(ret.val)); *returnValue = ret; }); }